--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "puppeteer-health-form",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "devDependencies": {
+    "@tsconfig/node14": "^1.0.0",
+    "eslint": "^7.12.1",
+    "gts": "^3.0.2",
+    "typescript": "^4.0.5"
+  }
 }
