--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   "name": "puppeteer-health-form",
   "devDependencies": {
-    "@tsconfig/node14": "^1.0.0",
+    "@types/node": "^14.14.6",
+    "@types/puppeteer": "^5.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.12.1",
-    "gts": "^3.0.2",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "dayjs": "^1.9.6",
+    "node-fetch": "^2.6.1"
+  },
+  "scripts": {
+    "run": "tsc && node dist/greeter.js"
   }
 }
