--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "puppeteer-health-form",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^14.14.6",
     "@types/puppeteer": "^5.4.0",
