--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^14.14.6",
+    "@types/node-fetch": "^2.5.7",
     "@types/puppeteer": "^5.4.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
@@ -13,7 +14,8 @@
   },
   "dependencies": {
     "dayjs": "^1.9.6",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "puppeteer": "^5.5.0"
   },
   "scripts": {
     "compile": "tsc",
