--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "name": "puppeteer-health-form",
+  "name": "autofill-form",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fahrulalwan/autofill-form.git"
+  },
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^14.14.6",
