--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
     "url": "https://github.com/fahrulalwan/autofill-form.git"
   },
   "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^14.14.6",
-    "@types/node-fetch": "^2.5.7",
-    "@types/puppeteer": "^5.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "typescript": "^4.0.5"
-  },
   "dependencies": {
-    "dayjs": "^1.9.6",
+    "dayjs": "^1.9.7",
     "node-fetch": "^2.6.1",
     "puppeteer": "^5.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "14.14.14",
+    "@types/node-fetch": "^2.5.7",
+    "@types/puppeteer": "^5.4.2",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "compile": "tsc",
