--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   },
   "license": "MIT",
   "dependencies": {
-    "dayjs": "^1.9.7",
+    "dayjs": "^1.10.6",
     "node-fetch": "^2.6.1",
-    "puppeteer": "^5.5.0"
+    "puppeteer": "^10.1.0"
   },
   "devDependencies": {
-    "@types/node": "14.14.14",
-    "@types/node-fetch": "^2.5.7",
-    "@types/puppeteer": "^5.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
-    "eslint": "^7.16.0",
+    "@types/node": "^16.4.5",
+    "@types/node-fetch": "^2.5.12",
+    "@types/puppeteer": "^5.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "typescript": "^4.1.3"
+    "eslint-plugin-import": "^2.23.4",
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "compile": "tsc",
